# Django-Rick-and-Morty

./: .gitignore  README.md  comentários.txt  data.json  db.sqlite3  django-project.code-workspace  pyproject.toml  requirements.txt
.github/workflows/: django.yml
base/global/: base.html
base/global/partials/: head.html  menu.html  postBlock.html
base/static/global/css/: style.css
base/static/global/js/: index.js
blog/: data.py  urls.py  views.py
blog/templates/blog/: articles.html  index.html  post.html
characters/: apps.py  data.py  urls.py  views.py
characters/templates/characters/: index.html  post.html
djangoapp/: pyproject.toml
djangoapp/base/global/: base.html
djangoapp/base/global/partials/: head.html  menu.html
djangoapp/base/static/global/css/: style.css
djangoapp/base/static/global/js/: index.js
djangoapp/characters/: data.py
djangoapp/characters/templates/characters/: post.html
djangoapp/home/: views.py
djangoapp/project/: settings.py  urls.py
djangoapp/users/: urls.py  views.py
djangoapp/users/templates/: cadastro.html  login.html
home/: urls.py  views.py
home/templates/home/: index.html
project/: settings.py  urls.py
users/: views.py
users/templates/: cadastro.html
