[tool.poetry]
name = "django-rick-and-morty"
version = "0.1.0"
description = ""
authors = ["AngeloCarnevale <angelo.carnevale@hotmail.com>"]
readme = "README.md"
packages = [{include = "django_rick_and_morty"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
