[tool.poetry]
name = "django-rick-and-morty"
version = "0.1.0"
description = ""
authors = ["AngeloCarnevale <angelo.carnevale@hotmail.com>"]
readme = "README.md"
packages = [{include = "django_rick_and_morty"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
requests = "^2.31.0"
fontawesome = "^5.10.1.post1"
fontawesomefree = "^6.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
